serengeti/gitea/httproute.yaml
apiVersion: "gateway.networking.k8s.io/v1"
kind: HTTPRoute
metadata:
  name: git-route
  namespace: serengeti
spec:
  hostnames:
    - "git.serengeti.sh"
  parentRefs:
    - name: eg
      namespace: default
      sectionName: "serengeti-https"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: git-service
          namespace: git
          port: 8080
